@@ -37,6 +37,8 @@ public:
 	Corpse(Client* client, sint32 in_rezexp);
 	Corpse(int32 in_corpseid, int32 in_charid, char* in_charname, ItemList* in_itemlist, int32 in_copper, int32 in_silver, int32 in_gold, int32 in_plat, float in_x, float in_y, float in_z, float in_heading, float in_size, int8 in_gender, int16 in_race, int8 in_class, int8 in_deity, int8 in_level, int8 in_texture, int8 in_helmtexture,int32 in_rezexp, bool wasAtGraveyard = false);
 	~Corpse();
+	
+	void LoadPlayerCorpseDecayTime(int32 dbid);
 
 	bool	IsCorpse()			const { return true; }
 	bool	IsPlayerCorpse()	const { return p_PlayerCorpse; }
